# ta2-minmod-infra

./: .env.template  .gitignore  README.md  build.py  docker-compose.yml  pyproject.toml  requirements.txt  update.py
containers/etl/: Dockerfile
containers/fuseki/: config.ttl
containers/nginx/: nginx.conf
mms/: build.py  exceptions.py  update.py
